--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
-          distribution: 'cornetto'
+          distribution: 'corretto'
           java-version: '17'
 
       - name: Gradle Test
